Fixed checkstyle violations. Started writing javadoc comments.